# CS2VoiceFix

./: .gitignore  .gitmodules  CMakeLists.txt  xmake.lua
.github/workflows/: main.yml
docker/: Dockerfile  docker-entrypoint.sh
makefiles/: linux.base.cmake  shared.cmake  windows.base.cmake
makefiles/metamod/: CS2VoiceFix.vdf.in  configure_metamod.cmake
package/: CS2VoiceFix.vdf
src/: extension.cpp  extension.h  interfaces.h
src/schema/: schemasystem.cpp  schemasystem.h  serversideclient.h  virtual.h
